updated third project

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="images/back.webp" alt="">
+            <img src="images/Project_background_picture/project3.png" alt="">
             <div class="portfolio-layer">
-                <h4>Web Design</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, provident? Tempora fugit placeat quidem reiciendis? Ipsam quis nulla voluptas incidunt!</p>
-                <a href="#"><i class='bx bx-link-external' ></i></a>
+                <h4>Raju Resume Builder</h4>
+                <p>Build your own resume using this website</p>
+                <a href="https://rajugorai810.github.io/ResumeBuilder/" target="_blank"><i class='bx bx-link-external' ></i></a>
             </div>
         </div>
 
