--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="portfolio-layer">
                 <h4>RajuNews</h4>
                 <p>This is a news website which will provide the news of different topics that you want to.</p>
-                <a href="Pages/Project_Pages/Raju_News_website/rajunews.html"><i class='bx bx-link-external' ></i></a>
+                <a href="https://rajugorai810.github.io/RajuNews/" target="_blank"><i class='bx bx-link-external' ></i></a>
             </div>
         </div>
         <div class="portfolio-box">
