play store added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- box icon -->
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="images/webicon.jpg">
     
     <!-- //favicon  -->
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon_io/android-chrome-192x192.png"> -->
@@ -44,7 +45,7 @@
                 <a href="https://www.linkedin.com/in/raju-gorai-6392b0229" target="_blank"><i class='bx bxl-linkedin' ></i></a>
             </div>
 
-            <a href="files/Raju_Gorai_resume.pdf" class="btn" download="lab">Download CV</a>
+            <a href="files/Raju_Gorai_resume.pdf" class="btn" download="Raju_Gorai_Resume">Download CV</a>
         </div>
 
         <div class="home-img">
@@ -111,7 +112,7 @@
             <div class="portfolio-layer">
                 <h4>Mausam App</h4>
                 <p>Mausam is weather app build using Flutter which display the weather of current Location of user.</p>
-                <a href="Pages/Project_Pages/mausamApp.html"><i class='bx bx-link-external' ></i></a>
+                <a href="Template/playstore/playstore.html"><i class='bx bx-link-external' ></i></a>
             </div>
         </div>
 
