--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a><a href="#about">About</a><a href="#services">Services</a><a href="#portfolio">Projects</a><a href="#contact">Contact Me</a>
+            <a href="#home" class="active">Home</a><a href="#about">About</a><a href="#services">What I Do?</a><a href="#portfolio">Projects</a><a href="#contact">Contact Me</a>
         </nav>
     </header>
 
@@ -72,7 +72,7 @@
     <!-- services section design -->
 
 <section class="services" id="services">
-    <h2 class="heading">Our <span>Services</span></h2>
+    <h2 class="heading">What <span>I</span> Do?</h2>
 
     <div class="services-container">
         <div class="services-box">
@@ -92,9 +92,9 @@
 
         <div class="services-box">
             <i class='bx bx-menu'></i>
-            <h3>UI/UX Design</h3>
-            <p>
-                UI/UX design is the process of crafting intuitive, visually appealing, and user-centered interfaces for digital products, ensuring a seamless and enjoyable user experience by combining aesthetics, usability, and interaction design principles.</p>
+            <h3>Competitive Programming</h3>
+            <p>Competitive programming is a mentally intense activity where participants use coding skills to solve intricate algorithmic problems under time pressure, fostering logical thinking, problem-solving, and efficient coding techniques.
+                </p>
             <a href="#" class="btn">Read More</a>
         </div>
     </div>
