--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <p>Experienced full-stack web developer, app developer, and UI/UX designer with expertise in multiple technologies and a passion for creating engaging and user-friendly digital experiences.
             </p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#" target="_blank"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.youtube.com/channel/UCoIsKsU1lslVMSV7USRo_-Q" target="_blank"><i class='bx bxl-youtube'></i></a>
                 <a href="https://www.instagram.com/sr4_specialraju" target="_blank"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://github.com/rajugorai810" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="https://www.linkedin.com/in/raju-gorai-6392b0229" target="_blank"><i class='bx bxl-linkedin' ></i></a>
@@ -92,7 +93,7 @@
 
         <div class="services-box">
             <i class='bx bx-menu'></i>
-            <h3>Competitive Programming</h3>
+            <h3>Programming</h3>
             <p>Competitive programming is a mentally intense activity where participants use coding skills to solve intricate algorithmic problems under time pressure, fostering logical thinking, problem-solving, and efficient coding techniques.
                 </p>
             <a href="#" class="btn">Read More</a>
